manifests/embed-config-api/embed-config-api.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    heritage: huv
    app: ${_name}
  name: ${_name}
spec:
  selector:
    matchLabels:
      app: ${_name}
  template:
    metadata:
      labels:
        app: ${_name}
      name: ${_name}
    spec:
      replicas: ${replicas}
      containers:
        - name: config-api
          image: ${image_digest}
          ports:
            - name: embed-config
              containerPort: 8888
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /internal/health
              port: 8888
          readinessProbe:
            httpGet:
              path: /internal/health
              port: 8888
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=$(INSTANCE_CONNECTION_NAME)=tcp:3306",
                    "-credential_file=/secrets/cloudsql/service-account-key"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
          - name: sql-access-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: sql-access-credentials
        secret:
          secretName: sql-access
