manifests/embed-config-api/embed-config-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${_name}
  labels:
    app: ${_name}
    um-component: config-api
spec:
  type: LoadBalancer
  ports:
  - name: http
    targetPort: 8888
    port: 80
  selector:
    app: ${_name}
