manifests/embed-config-api/config-api-ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: ${_name}
spec:
  virtualhost:
    fqdn: ${_name}${domain}
    tls:
      secretName: ${tls_secret}
  routes:
    - match: /
      services:
        - name: ${_name}
          port: 80
